adding the analysis and the paper

--- a/thesis/content/chp-2-emotion.tex
+++ b/thesis/content/chp-2-emotion.tex
@@ -11,11 +11,11 @@
 
 %%% 1 page: overview of what is going on
 
-In this chapter, related research to this work is being presented. It starts with introducing and reviewing common terminology used in the research on affect and emotion and the methods that have been used to measure affect and emotion; And continues by presenting previous research in game balancing that inspired this work in its game experience enhancement study.
+In this chapter, related research to this work is being presented. It starts with introducing and reviewing common terminology used in the research on affect and emotion and the methods that have been used to measure affect and emotion.
 
 \section{Affect and Emotion}
 
-In this section common terms used in the literature is introduced along with different ways these terms are often described.
+This section introduces common terms used in the literature along with different ways these terms are often described.
 
 \subsection{Terminology}
 
