--- a/thesis/content/chp-3-video-games.tex
+++ b/thesis/content/chp-3-video-games.tex
@@ -29,7 +29,7 @@ From the above items, an activity doesn't necessarily require all the eight comp
 {challenge-vs-skill.pdf}
 {challenge-vs-skill}
 
-Flow zone is an inspiring concept in flow theory and is illustrated in figure ~\ref{fig:flow-zone}. What flow zone suggests, in order to sustain players' flow experience, is to balance the inherent challenge of the activity and the required player's ability (skills) to address and overcome it ~\cite{chen2007flow}. It avoids the activity to become so overwhelming by a challenge beyond player's ability and consequently generating anxiety; Also avoids failing to engage the player and become so boring due to a challenge level less than player's ability. However, this should be mentioned, we fortunately have tolerance for a temporary lack of stimulation, with an assumption of more is on the way. One should consider the flow zone as a fuzzy safe zone where the activity is not yet too challenging or boring ~\cite{csikszentmihalyi1990flow}.
+Flow zone is an inspiring concept in flow theory and is illustrated in Figure ~\ref{fig:flow-zone}. What flow zone suggests, in order to sustain players' flow experience, is to balance the inherent challenge of the activity and the required player's ability (skills) to address and overcome it ~\cite{chen2007flow}. It avoids the activity to become so overwhelming by a challenge beyond player's ability and consequently generating anxiety; Also avoids failing to engage the player and become so boring due to a challenge level less than player's ability. However, this should be mentioned, we fortunately have tolerance for a temporary lack of stimulation, with an assumption of more is on the way. One should consider the flow zone as a fuzzy safe zone where the activity is not yet too challenging or boring ~\cite{csikszentmihalyi1990flow}.
 
 \img
 {Flow zone}
@@ -41,7 +41,7 @@ As far as the content and premise of the activity is inherently appealing to the
 
 \section{Dynamic Game Balancing vs. Static Game Balancing }
 
-Many video games offer only a simple narrow and static experience, which is shown with the red line in figure ~\ref{fig:flow-zone}. This statically preset path might keep the typical player in the flow zone but will not be fun for the hardcore or novice player ~\cite{chen2007flow}. For example simple skills for typical players such as walking in a 3D space and looking around by controlling the camera can be easily found new and quite cumbersome to many casual players who are only used to 2D side-scroller games. This frustrating introductory challenge combined with the main challenges of the game can totally turn the casual gamers turn away. One should note that frustration due to lack of skill during game play is not necessarily same as frustration caused by difficult game levels; In fact, Kiel pointed two kinds of frustration during games, the at-game-frustration and in-game-frustration. The first is due to lack of skill during game playing and the second in caused by difficult game levels ~\cite{gilleade2004using}.
+Many video games offer only a simple narrow and static experience, which is shown with the red line in Figure ~\ref{fig:flow-zone}. This statically preset path might keep the typical player in the flow zone but will not be fun for the hardcore or novice player ~\cite{chen2007flow}. For example simple skills for typical players such as walking in a 3D space and looking around by controlling the camera can be easily found new and quite cumbersome to many casual players who are only used to 2D side-scroller games. This frustrating introductory challenge combined with the main challenges of the game can totally turn the casual gamers turn away. One should note that frustration due to lack of skill during game play is not necessarily same as frustration caused by difficult game levels; In fact, Kiel pointed two kinds of frustration during games, the at-game-frustration and in-game-frustration. The first is due to lack of skill during game playing and the second in caused by difficult game levels ~\cite{gilleade2004using}.
 
 \img
 {Adapted flow zone}
@@ -62,14 +62,34 @@ p A primary issue in competitive games is that the different teams or players sh
 
 In recent years many high quality games to a large degree rely on high quality AI as an important selling point ~\cite{forbus2002ai}. Many research have been done on utilizing game AI to dynamically adjust the difficulty level. Xiang et al. in their work on dynamic difficulty adjustment by facial expression ~\cite{xiang2013dynamic} have employed Gaussian Mixture Module and multi variate pattern mining to model the player's reaction pattern ~\cite{lee2006dynamic, chiu2008using}. They have also controlled NPCs behaviors by reinforce learning algorithm ~\cite{spronck2004difficulty, andrade2005challenge}. Hunicke ~\cite{hunicke2004ai} used Hamlet system to predict when the player is repeatedly entering an undesirable loop, and help them get out of it, they have explored computational and design requirements for a dynamic difficulty adjustment system using probabilistic methods based on Half Life game engine. Joost ~\cite{westra2009adaptive} proposed an adaptation approach that uses expert knowledge for the adaptation. They used a game adaption model and organized agents to choose the most optimal task for the trainee, given the user model, the game flow and the capabilities of the agents. Hom ~\cite{hom2007automatic} used AI techniques to design balanced board games like checkers and Go by modifying the rules of the game, not just the rule parameters. Olesen has explored neuro-evolution methodologies to generate intelligent opponents in Real-Time Strategy (RTS) games and tried to adapt the challenge generated by the game opponents to match the skill of a player in real-time ~\cite{olesen2008real}.
 
-Addressing the game balance problem using predefined levels obviously cannot incorporate the needs of all potential players of the game while merely using player's in-game generated data and employing artificial intelligence sometimes generates predictable behaviors which reduce the believability of the non-player characters (NPCs). Furthermore, human players enhance their skills while playing a game which necessitates an adaptive mechanism that covers the player's need for more challenging NPCs during play ~\cite{olesen2008real}. We should also mention, with all development on AI in computer games, game players often still find playing against human controlled opponents (via a network) more interesting rather than computer controlled ones ~\cite{weibel2008playing}.
+% http://en.wikipedia.org/wiki/Dynamic_game_difficulty_balancing
+p Different approaches are found in the literature to address dynamic game difficulty balancing. In all cases, it is necessary to measure, implicitly or explicitly, the difficulty the user is facing at a given moment. This measure can be performed by a heuristic function, which some authors call "challenge function". This function maps a given game state into a value that specifies how easy or difficult the game feels to the user at a specific moment. Examples of heuristics used are:
+
+The rate of successful shots or hits
+The numbers of won and lost pieces
+Life points
+Evolution
+Time to complete some task
+... or any metric used to calculate a game score.
+
+\subsection{AI in Dynamic Game Balancing}
+p Demasi and Cruz[5] built intelligent agents employing genetic algorithms techniques to keep alive agents that best fit the user level. Online coevolution is used in order to speed up the learning process. Online coevolution uses pre-defined models (agents with good genetic features) as parents in the genetic operations, so that the evolution is biased by them. These models are constructed by offline training or by hand, when the agent genetic encoding is simple enough.
+
+p Other work in the field of DGB is based on the hypothesis that the player-opponent interaction—rather than the audiovisual features, the context or the genre of the game—is the property that contributes the majority of the quality features of entertainment in a computer game.[6] Based on this fundamental assumption, a metric for measuring the real time entertainment value of predator/prey games was introduced, and established as efficient and reliable by validation against human judgment.
+
+p Further studies by Yannakakis and Hallam[7] have shown that artificial neural networks (ANN) and fuzzy neural networks can extract a better estimator of player satisfaction than a human-designed one, given appropriate estimators of the challenge and curiosity (intrinsic qualitative factors for engaging gameplay according to Malone)[8] of the game and data on human players' preferences. The approach of constructing user models of the player of a game that can predict the answers to which variants of the game are more or less fun is defined as Entertainment Modeling. The model is usually constructed using machine learning techniques applied to game parameters derived from player-game interaction and/or statistical features of player's physiological signals recorded during play.[9] This basic approach is applicable to a variety of games, both computer[7] and physical.
+
+\subsection{Dynamic Game Balancing in Recent Games}
+p In 2009, Resident Evil 5 employed a system called the "Difficulty Scale", unknown to most players, as the only mention of it was in the Official Strategy Guide. This system grades the players performance on a number scale from 1 to 10, and adjusts both enemy behavior/attacks used and enemy damage/resistance based on the players' performance (such as deaths, critical attacks, etc.). The selected difficulty levels lock players at a certain number; for example, on Normal difficulty, one starts at Grade 4, can move down to Grade 2 if doing poorly, or up to Grade 7 if doing well. The grades between difficulties can overlap.[14]
+
+p The 2008 video game Left 4 Dead uses a new artificial intelligence technology dubbed "The AI Director".[11] The AI Director is used to procedurally generate a different experience for the players each time the game is played. It monitors individual players' performance and how well they work together as a group to pace the game, determining the number of zombies that attack the player and the location of boss infected encounters based on information gathered. Besides pacing, the Director also controls some video and audio elements of the game to set a mood for a boss encounter or to draw the players' attention to a certain area.[12] Valve calls the way the Director is working "Procedural narrative" because instead of having a difficulty level which just ramps up to a constant level, the A.I. analyzes how the players fared in the game so far, and try to add subsequent events that would give them a sense of narrative.[13]
+
+p In Fallout: New Vegas and Fallout 3, as the player increases in level, tougher variants of enemies, enemies with higher statistics and better weapons, or new enemies will replace older ones to retain a constant difficulty, which can be raised, using a slider, with experience bonuses and vice versa in Fallout 3. This can also be done in New Vegas, but there is no bonus to increasing or decreasing the difficulty.
+%http://en.wikipedia.org/wiki/Dynamic_game_difficulty_balancing
+
+Addressing the game balance problem using predefined difficulty levels obviously cannot incorporate the needs of all potential players of the game while merely using player's in-game generated data and employing artificial intelligence sometimes generates predictable behaviors which reduce the believability of the non-player characters (NPCs). Furthermore, human players enhance their skills while playing a game which necessitates an adaptive mechanism that covers the player's need for more challenging NPCs during play ~\cite{olesen2008real}. We should also mention, with all development on AI in computer games, game players often still find playing against human controlled opponents (via a network) more interesting rather than computer controlled ones ~\cite{weibel2008playing}.
 
 \section{Emotionally Adaptive Games}
-%%% talk about works has been done in this area and different approaches
-%%% and relate that to what we have done in this research
-
-%%% adaptive play technologies critique existing systems (easy medium hard system), ideas
-%%% , problems and challenges, works has been done, goals for this study and future works.
 %%% adapting play technologies by changing Player, NPC, Environment parameters.
 %%% getting challenged and physiological signals, the importance of GSR
 
@@ -82,13 +102,14 @@ While adjusting the challenge level is crucial to every entertaining video game 
 {affective-game-system}
 
 
+
 % Creating an Emotionally Adaptive Game.pdf
-p The importance of emotions in computing is widely argued for (e.g. [8]). Emotion theorists differ over a discrete versus a dimensional model. The \"discretionists\" (e.g. [9]) argue for basic discrete emotions, such as anger, fear, sadness and happiness, as unique experiential states. The \"dimensionalists\" (e.g. [10]), on the other hand, look at emotions in terms of a two-dimensional space consisting of valence ("pleasantness") and arousal ("activation"). Sometimes dominance is added as a third dimension.  Effective human-computer interaction from an emotions perspective works in terms of an \"affective loop\" [7]. A similar feedback loop in a games context is described by [11]. Inspired by their work, Fig. 1 (right panel) shows a schematic view on the functioning of an emotionally adaptive game. By providing the right game mechanics [12] (e.g. audiovisuals, narrative, challenge), the game influences the player's experience, behavior and emotional state. Ideally, during play, the emotional state of the player (measured in terms of emotion-data), is continuously being fed back to the game so that the game can adapt its mechanics (e.g. difficulty level)
+p The importance of emotions in computing is widely argued for (e.g. [8]). Emotion theorists differ over a discrete versus a dimensional model. The \"discretionists\" (e.g. [9]) argue for basic discrete emotions, such as anger, fear, sadness and happiness, as unique experiential states. The \"dimensionalists\" (e.g. [10]), on the other hand, look at emotions in terms of a two-dimensional space consisting of valence ("pleasantness") and arousal ("activation"). Sometimes dominance is added as a third dimension. Effective human-computer interaction from an emotions perspective works in terms of an \"affective loop\" [7]. A similar feedback loop in a games context is described by [11]. Inspired by their work, Fig. 1 (right panel) shows a schematic view on the functioning of an emotionally adaptive game. By providing the right game mechanics [12] (e.g. audiovisuals, narrative, challenge), the game influences the player's experience, behavior and emotional state. Ideally, during play, the emotional state of the player (measured in terms of emotion-data), is continuously being fed back to the game so that the game can adapt its mechanics (e.g. difficulty level)
 accordingly in real-time. This all is done to create the optimal experience (which is referred to in literature as e.g. flow [13] or immersion [14]). Previous research attempts to create emotionally adaptive software have mainly focused on tutoring systems and workload / performance optimization (see e.g. [15]). Fewer attempts have been made to incorporate a closed-loop mechanism in a games context. Takahashi et al. [16] and Rani et al. [17] created a game that was found to improve player performance by adapting difficulty level to player's physiological state. Concept validation claims of these both studies were, however, based on a limited number of participants. Besides these attempts, a number of biofeedback games have recently been developed, which have some integration of a player's physiological data into the game (e.g. [18], [19] and [20]). These games however focus on stress manipulation rather than optimization of gameplay experience. Probably closest to the present project's scope is the work of Saari and colleagues, who created the Mind-Based Technology framework for psychological customization [21]. They have further elaborated this in a games context (e.g. [4], [22]) and are currently developing an emotionally adaptive game demo. As a first step in creating an emotionally adaptive game, system input and output need to be specified in further detail. Regarding output (emotion-data), Saari et al. [22] provide an extensive discussion of possible elements to be adapted, structured by \"psychologically validated templates\". We have adopted a rather straightforward and intuitive \"template\": Game speed. We will manipulate the game's speed to influence the player's emotional state (the interplay between boredom, frustration and enjoyment, Fig. 1-left panel). Regarding system input (emotion-data), Öhman [23] distinguished three categories of emotion measures: Self-reports, overt behavior and physiological responses. Self-reports are frequently used for assessing players' emotions and experiences [5] but not suitable (since too obtrusive) for real-time application in a game. Regarding overt behavior, potentially useful techniques for measuring boredom, frustration and enjoyment are facial emotion tracking [24] and the analysis of posture and pressure exerted on the game controls [25]. Regarding physiological responses, there is an extensive field with many research findings in psychophysiology. Although the research is done in varying contexts with sometimes contradicting results, it is considered a highly interesting field for analyzing emotions in games. We have limited ourselves to the methods described below. Regarding cardiovascular (heart) activity, tonic (long-term, as opposed to phasic) heart rate (HR) is known to increase with sympathetic nervous system activity, such as emotional arousal and cognitive effort and stress. On the other hand, increases in attention (mediated in the parasympathetic nervous system) lead to a decreased heart rate [26]. [27] found HR features to correlate with self-reported fun in games. Heart rate variability (HRV) is considered an index for mental effort (e.g. [28]). Some researchers (e.g. [29]) consider the percentage power in the low-frequency (LF) 0.070.14 Hz range as a particularly effective index for task-related mental effort / sympathetic activity. Respiratory responses are analyzed to control for respiratory artifacts in e.g. HRV (a phenomenon known as respiratory sinus arrhythmia). Respiration may, however, also be used as a measure itself, e.g. for investigating stress and mental load [30]. Electrodermal activity (EDA) concerns the electrical resistance of the skin, also known as Skin Conductance (SCL, SCR) or Galvanic Skin Response (GSR). Skin conductance level is known to increase with information processing and the frequency of non-specific skin responses increases with arousal [26]. Electromyography (EMG) is a technique for measuring muscle activity; electric potential is being generated when muscle cells contract. Facial EMG is frequently used as a metric for valence. The most frequently analyzed facial muscles in this context are the orbicularis oculi (OO, used for closing the eyelids), zygomaticus major (ZYG, smiling) and corrugator supercilii (CORR, frowning). Most studies find positive correlations between valence and the OO and ZYG muscles, and a negative correlation between valence and CORR muscle (see e.g. [31], [32], [33]). In addition to the above findings, there are also a considerable number of studies without significant findings [34]. Because of the large differences in physiological responses between individuals and within individuals over time (autonomic response stereotypy principle, see e.g. [15], [35]), some researchers (e.g. [36]) argue for normalizing physiological data to facilitate a group analysis of the data. Additionally, affective systems should employ a battery of physiological features for accurate emotion predictions (e.g. [37]), and should allow for user-control for the sake of autonomy, privacy and interpretation of the data [41]. Because of the context-dependency of physiological responses, a two-stage approach was adopted. The purpose of the current initial study is to investigate physiological and other affect-related responses in relation to an experimentally induced change in game mechanics. Note that in this study the affective loop is not yet closed, that is, real-time affective indicators are not yet directly influencing the game mechanics. This will be the purpose of phase 2 of our work. The research question for the current invesigation evolved around the components of our framework (Fig. 1 - right panel): What game mechanics (speed settings) lead to what kind of emotional state, and what emotion-data is this accompanied by? This was investigated by means of a controlled experiment, as explained in the next section.
 % Creating an Emotionally Adaptive Game.pdf
 
 %% TODO:paraphrase
-p The Affective Gaming concept was first introduced by Wehrenberg, Charles through using Biofeedback to control a game based on relaxation level, it was the earliest research for correlating a game with biofeedback and after years of research the project was first implemented in 1984 for apple II computers, and the test results proved that human arousal level can actually be measured through GSR and used to control a game  ~\cite{wehrenberg1995willball}.
+p The Affective Gaming concept was first introduced by Wehrenberg, Charles through using Biofeedback to control a game based on relaxation level, it was the earliest research for correlating a game with biofeedback and after years of research the project was first implemented in 1984 for apple II computers, and the test results proved that human arousal level can actually be measured through GSR and used to control a game ~\cite{wehrenberg1995willball}.
 %% TODO:paraphrase
 
 % Emotionally Adapted Games - An Example of a First Person Shooter.pdf
@@ -106,7 +127,7 @@ In this section a number of noticeable works related to emotionally adaptive gam
 
 %Creating an Emotionally Adaptive Game.pdf
 \subsection{Emotional State and Unguided Player Speed Variation}
-Tijs et al. in their work on emotionally adaptive games have developed a version of the Pacman PC-game (figure: ~\ref{fig:pacman}) called Stimulus ~\cite{tijs2009creating}. They chose Pacman for a number of reasons to conduct their study, (1) relatively uncomplicated nature of the game without major changes in e.g. audiovisuals during play, which could lead to emotional bias, (2) being a well-known game and easy to pick up and consequently requiring relatively short practice to minimize learning effects, and also (3) because Pacman has a rather continuous flow of action which is beneficial when comparing blocks of time the game is played. Similar features of Pacman also has made the game being used in other affective computing studies (e.g. ~\cite{yannakakis2007towards}). However as their work describes a number of adaptations have been made to the game to suit the experiments: (1) The players have been playing the same level of difficulty during the experiment, (2) Entities that were eaten, such as points and pills, returned after a while (added back to the game scene), (3) The speed level of the player changed at preset times (unknown to the player), (4) Eating objects increased the player's score but being eaten by the enemies meant a strong decrease in score, and (5) The overall objective of the game was to score as many points as possible. Their choice for manipulating speed as the difficulty parameter, instead of e.g. the number of enemies has been due to the fact that the number of normal ghosts was constantly changed during the default gameplay as a result to Pacman eating star-shaped pills. This game was played using arrow keys on the keyboard, while all participants have been offered to use their preferred hands to play the game ~\cite{tijs2009creating}.
+Tijs et al. in their work on emotionally adaptive games have developed a version of the Pacman PC-game (Figure ~\ref{fig:pacman}) called Stimulus ~\cite{tijs2009creating}. They chose Pacman for a number of reasons to conduct their study, (1) relatively uncomplicated nature of the game without major changes in e.g. audiovisuals during play, which could lead to emotional bias, (2) being a well-known game and easy to pick up and consequently requiring relatively short practice to minimize learning effects, and also (3) because Pacman has a rather continuous flow of action which is beneficial when comparing blocks of time the game is played. Similar features of Pacman also has made the game being used in other affective computing studies (e.g. ~\cite{yannakakis2007towards}). However as their work describes a number of adaptations have been made to the game to suit the experiments: (1) The players have been playing the same level of difficulty during the experiment, (2) Entities that were eaten, such as points and pills, returned after a while (added back to the game scene), (3) The speed level of the player changed at preset times (unknown to the player), (4) Eating objects increased the player's score but being eaten by the enemies meant a strong decrease in score, and (5) The overall objective of the game was to score as many points as possible. Their choice for manipulating speed as the difficulty parameter, instead of e.g. the number of enemies has been due to the fact that the number of normal ghosts was constantly changed during the default gameplay as a result to Pacman eating star-shaped pills. This game was played using arrow keys on the keyboard, while all participants have been offered to use their preferred hands to play the game ~\cite{tijs2009creating}.
 
 \img
 {Pacman}
@@ -130,7 +151,7 @@ Aggag and Revett could not determine if level of arousal had any effect on playe
 \subsection{Emotion and Standard Game Input Devices}
 Sykes and Brown in their work on measuring emotion through gamepad ~\cite{sykes2003affective}, both from a marketing perspective and also targeting current generation of video-games and available gaming technologies, suggest to use current video game technologies to measure affect rather than introducing new paraphernalia to the gaming experience. They have used modern game consoles' controller analogue buttons which indicate the pressure used when playing a game. Possibility of detecting a person's emotion through finger pressure ~\cite{clynes1977sentics}, makes the analogue buttons on the gamepad a possible resource for collecting data.
 
-In their study, Sykes and Brown have shown data from gamepad correlates with a player's level of arousal during game play. They have developed a remake of the classic arcade game `Space Invaders' (figure: ~\ref{fig:space-invaders}) for their study. Players needed to shoot alien spacecraft as they march down the screen toward them. It was possible for the players to move to their left or right to avoid offensive attacks. They could also return fire by pressing a button on the gamepad. They have conducted three levels of difficulty were meant to change the players' level of arousal in different levels: easy, medium and hard. For the medium level the alien craft would march twice as fast, and the player would have the benefit of only two barriers. In the hard level the tempo of the alien craft was increased by a further factor of two, and the barriers were removed completely ~\cite{sykes2003affective}. Players have played different levels in random order and the amount of pressure exerted by the player on each button press has been recorded by the game.
+In their study, Sykes and Brown have shown data from gamepad correlates with a player's level of arousal during game play. They have developed a remake of the classic arcade game `Space Invaders' (Figure ~\ref{fig:space-invaders}) for their study. Players needed to shoot alien spacecraft as they march down the screen toward them. It was possible for the players to move to their left or right to avoid offensive attacks. They could also return fire by pressing a button on the gamepad. They have conducted three levels of difficulty were meant to change the players' level of arousal in different levels: easy, medium and hard. For the medium level the alien craft would march twice as fast, and the player would have the benefit of only two barriers. In the hard level the tempo of the alien craft was increased by a further factor of two, and the barriers were removed completely ~\cite{sykes2003affective}. Players have played different levels in random order and the amount of pressure exerted by the player on each button press has been recorded by the game.
 
 Although Sykes and Brown in their study do not investigate the effect of NPC and environmental factors separately but based on their results, they conclude it is possible to determine the level of a player's arousal by the pressure they use when controlling the gamepad.
 
