--- a/thesis/content/chp-5-exprm.tex
+++ b/thesis/content/chp-5-exprm.tex
@@ -36,7 +36,6 @@ The experiment was piloted with six participants (2 female). Pilot participants 
 
 All experiments were conducted on weekdays, with the first slot beginning at 11:00h and the last ending at 18:30h. Participants were contacted to choose their preferred time slots while general time for one experimental session was 1:30 hours with setup and cleanup. Participants were invited to a laboratory, after a brief introduction of the experimental procedure, and becoming aware of the data being collected during the session, they were asked to fill out and sign informed consent form, this was the only paper form used during the experiment. Then the GSR sensors were attached to participant's hand.
 
-
 Attached GSR sensors wired to the signal decoder brings limitations for participants while moving and using their hand. To diminish noisy signals and make participants feel comfortable under these limitations, the GSR sensors were attached to the hand that was handling the mouse during the game. While fingers dealing with mouse were quite steady compared to the other hand handling the keyboard, those fingers used to press the left and right mouse buttons were usually most comfortable ones for attaching GSR sensors. Some participants used index and middle fingers to press mouse buttons and others used index and ring fingers to do that \ref{fig:gsr-attached}.
 
 \img
@@ -134,23 +133,60 @@ Environment modes
 
 % describe 16 participant's feedbacks and comments, and general ideas on how each one of them migh have experienced different situations through the game.
 
-\img
-{Players' performance}
-{Normal q-q plot of players' performance}
-{res-1.png}
-{players-performance}
+%-----------------------------------------------------------
+\begin{center}
+\label{tbl:players-stats}
+\captionof{table}{Sixteen players with their performance, divided into four experience categories spread across all four conditions}
+\begin{tabular}{+l^l^l^l^l}
+\bhline
+\rowstyle{\bfseries}
+ID       &   Performance   &   Order   &   Experience   &   Condition \\
+\hline
+1        &   69            &   1       &   1            &   4 \\
+2        &   74            &   1       &   2            &   1 \\
+3        &   117           &   1       &   3            &   2 \\
+4        &   106           &   1       &   4            &   3 \\
+5        &   42            &   2       &   1            &   1 \\
+6        &   86            &   2       &   2            &   2 \\
+7        &   67            &   2       &   3            &   3 \\
+8        &   118           &   2       &   4            &   4 \\
+9        &   13            &   3       &   1            &   3 \\
+10       &   106           &   3       &   2            &   4 \\
+11       &   98            &   3       &   3            &   1 \\
+12       &   140           &   3       &   4            &   2 \\
+13       &   66            &   4       &   1            &   2 \\
+14       &   58            &   4       &   2            &   3 \\
+15       &   110           &   4       &   3            &   4 \\
+16       &   140           &   4       &   4            &   1 \\
+\bhline
+\end{tabular}
+\end{center}
+%-----------------------------------------------------------
 
 \img
-{Residuals vs. fitted values}
-{Plot of residuals vs. fitted values}
-{res-2.png}
-{residuals-vs-fitted}
+{Normal Q-Q plot of players' performance}
+{Normal Q-Q plot of players' performance}
+{anova-qq-performance.pdf}
+{players-qq-performance}
 
 \img
-{Residuals vs. conditions}
-{Plot of residuals vs. conditions}
-{res-3.png}
-{residuals-vs-conditions}
+{Plot of residuals vs. fitted values for players' performance}
+{Plot of residuals vs. fitted values for players' performance}
+{anova-residuals-vs-fitted-values-performance.pdf}
+{residuals-vs-fitted-values-performance}
+
+
+\img
+{Normal Q-Q plot of players' excitement}
+{Normal Q-Q plot of players' excitement}
+{anova-qq-excitement.pdf}
+{players-qq-excitement}
+
+\img
+{Plot of residuals vs. fitted values for players' excitement}
+{Plot of residuals vs. fitted values for players' excitement}
+{anova-residuals-vs-fitted-values-excitement.pdf}
+{residuals-vs-fitted-values-excitement}
 
 %-----------------------------------------------------------
 \begin{center}
